kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: registry.gitlab.com/nabilou-anoir/projet-tutore-rh/backend:20260401-amd64
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: firebase-service-account-volume
              mountPath: /app/firebase-service-account.json
              subPath: firebase-service-account.json
              readOnly: true
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: firebase-service-account-volume
          secret:
            secretName: firebase-service-account
