kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: registry.gitlab.com/nabilou-anoir/projet-tutore-rh/frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
