kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: projetasinhpa
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcluster
spec:
  rules:
    - host: projetasinhpa.chl.connected-health.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8989
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8989
          - path: /rest
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8989
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - projetasinhpa.chl.connected-health.fr
      secretName: frontend-cert
